# FLExo-BLAST

./: CHANGELOG.md  MANIFEST.in  setup.cfg  setup.py
flexo_blast/: __init__.py  blast.py  print_final_results.py
flexo_blast/seq_multi_db/: multiblast.faa
flexo_blast/seq_single_db/: singleblast.faa
