[metadata]
name = flexo_blast
version = attr: flexo_blast.__version__
author = Laura M. Carroll
author_email = lmc297@cornell.edu
url = https://github.com/lmc297/FLExo_BLAST
description = Flexible Locator for Exotoxins (BLAST-based methods)
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
license_file = LICENSE
platform = any
keywords = exotoxin, bacteria, genome, blast
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/lmc297/FLExo_BLAST/issues
    #Publication = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7536271/
    Changelog = https://github.com/lmc297/FLExo_BLAST/blob/main/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools >=38.3.0
install_requires =
    numpy >=1.18
    biopython >=1.74
    pandas >=1.0

[options.entry_points]
console_scripts =
    flexo_blast = flexo_blast:main

[bdist_wheel]
universal = true
compression = stored
